fix issues with spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -138,7 +138,7 @@ h1  {
   .container {
     padding-left: 3px;
     padding-right: 3px;
-    padding-top: 480px;
+    padding-top: 520px;
   }
   .horizontal_nav a {
     border-radius: 15px;
